--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -33,7 +33,7 @@ jobs:
           aws ecr get-login-password --region eu-north-1 | docker login --username AWS --password-stdin ${{ secrets.ECR_REPOSITORY }}
 
       - name: Extract version
-        run: echo "VERSION=$(cat VERSION | tr -d '\n')" >> $GITHUB_ENV
+        run: echo "VERSION=$(cat VERSION | sed 's/[[:space:]]//g')" >> $GITHUB_ENV
 
       - name: Extract commit hash and date
         run: |
