--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -45,6 +45,7 @@ jobs:
           if [[ "${{ github.event_name }}" == "pull_request" && "${{ github.base_ref }}" == "main" ]]; then
             echo "IMAGE_TAG=${VERSION}-alpha-${DATE}-${COMMIT_HASH}" >> $GITHUB_ENV
             echo "DEPLOY_ENV=develop" >> $GITHUB_ENV
+            export DEPLOY_ENV=develop
             echo "*dev* --> DEPLOY_ENV=$(printenv DEPLOY_ENV)"
           elif [[ "${{ github.ref }}" == "refs/heads/main" ]]; then
             echo "IMAGE_TAG=${VERSION}-${DATE}-${COMMIT_HASH}" >> $GITHUB_ENV
@@ -54,9 +55,6 @@ jobs:
             echo "Skipping workflow as the branch is not main."
             exit 0
           fi
-      
-          # Debugging output
-          echo "DEPLOY_ENV=$(printenv DEPLOY_ENV)"
     
       - name: Build Docker Image
         run: docker build -t stock-analyser .
