--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -39,13 +39,13 @@ jobs:
         run: |
           echo "COMMIT_HASH=$(git rev-parse --short HEAD)" >> $GITHUB_ENV
           echo "DATE=$(date +'%Y%m%d')" >> $GITHUB_ENV
+          echo "DATE=$(printenv DATE)"
 
       - name: Determine Tag Name and Deployment Folder
         run: |
           if [[ "${{ github.event_name }}" == "pull_request" && "${{ github.base_ref }}" == "main" ]]; then
             echo "IMAGE_TAG=${VERSION}-alpha-${DATE}-${COMMIT_HASH}" >> $GITHUB_ENV
             echo "DEPLOY_ENV=develop" >> $GITHUB_ENV
-            export DEPLOY_ENV=develop
             echo "*dev* --> DEPLOY_ENV=$(printenv DEPLOY_ENV)"
           elif [[ "${{ github.ref }}" == "refs/heads/main" ]]; then
             echo "IMAGE_TAG=${VERSION}-${DATE}-${COMMIT_HASH}" >> $GITHUB_ENV
@@ -89,7 +89,7 @@ jobs:
 
       - name: Update docker-compose.yml
         run: |
-          echo "*dev* --> DEPLOY_ENV=$(printenv DEPLOY_ENV)"
+          echo "DEPLOY_ENV=$(printenv DEPLOY_ENV)"
           DEPLOY_FOLDER="${{ github.workspace }}/stock-analyser-deploy/${DEPLOY_ENV}"
           COMPOSE_FILE="$DEPLOY_FOLDER/docker-compose.yml"
       
