--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -45,12 +45,10 @@ jobs:
         run: |
           if [[ "${{ github.event_name }}" == "pull_request" && "${{ github.base_ref }}" == "main" ]]; then
             echo "IMAGE_TAG=${VERSION}-alpha-${DATE}-${COMMIT_HASH}" >> $GITHUB_ENV
-            echo "DEPLOY_ENV=develop" >> $GITHUB_ENV
-            echo "*dev* --> DEPLOY_ENV=$(printenv DEPLOY_ENV)"
+            echo "DEPLOY_ENV=develop" >> $GITHUB_OUTPUT
           elif [[ "${{ github.ref }}" == "refs/heads/main" ]]; then
             echo "IMAGE_TAG=${VERSION}-${DATE}-${COMMIT_HASH}" >> $GITHUB_ENV
-            echo "DEPLOY_ENV=prod" >> $GITHUB_ENV
-            echo "*prod* -->  DEPLOY_ENV=$(printenv DEPLOY_ENV)"
+            echo "DEPLOY_ENV=prod" >> $GITHUB_OUTPUT
           else
             echo "Skipping workflow as the branch is not main."
             exit 0
@@ -61,7 +59,6 @@ jobs:
 
       - name: Tag and Push Docker Image
         run: |
-          echo "*dev* --> DEPLOY_ENV=$(printenv DEPLOY_ENV)"
           FULL_IMAGE_TAG="${{ secrets.ECR_REPOSITORY }}:${IMAGE_TAG}"
           echo "Tagging Docker image with: $FULL_IMAGE_TAG"
 
@@ -90,7 +87,7 @@ jobs:
 
       - name: Update docker-compose.yml
         run: |
-          echo "DEPLOY_ENV=$(printenv DEPLOY_ENV)"
+          echo "DEPLOY_ENV from previous job: ${{ needs.set-env.outputs.DEPLOY_ENV }}"
           DEPLOY_FOLDER="${{ github.workspace }}/stock-analyser-deploy/${DEPLOY_ENV}"
           COMPOSE_FILE="$DEPLOY_FOLDER/docker-compose.yml"
       
