--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -81,7 +81,6 @@ jobs:
         uses: actions/checkout@v4
         with:
           repository: FledglingTraders/stock-analyser-deploy
-          path: stock-analyser-deploy
 
       - name: Configure Git
         run: |
@@ -91,7 +90,7 @@ jobs:
       - name: Update docker-compose.yml
         run: |
           echo "DEPLOY_ENV from previous job: ${{ needs.build-and-push.outputs.DEPLOY_ENV }}"
-          DEPLOY_FOLDER="${{ github.workspace }}/stock-analyser-deploy/${DEPLOY_ENV}"
+          DEPLOY_FOLDER="${{ github.workspace }}/stock-analyser-deploy/${{ needs.build-and-push.outputs.DEPLOY_ENV }}"
           COMPOSE_FILE="$DEPLOY_FOLDER/docker-compose.yml"
       
           if [[ -f "$COMPOSE_FILE" ]]; then
