--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -97,10 +97,10 @@ jobs:
             echo "ERROR: docker-compose.yml not found at $COMPOSE_FILE!"
             exit 1
           fi
+          cat "$COMPOSE_FILE"
 
       - name: Commit and Push Changes
         run: |
-          cd "${{ github.workspace }}"
           git add .
           git commit -m "Update docker image to ${{ secrets.ECR_REPOSITORY }}:${IMAGE_TAG}"
           git push origin main
