--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,6 +14,7 @@ jobs:
     runs-on: ubuntu-latest
     outputs:
       DEPLOY_ENV: ${{ steps.determine_tag.outputs.DEPLOY_ENV }}
+      FULL_IMAGE_TAG: ${{ steps.tag_and_push.outputs.FULL_IMAGE_TAG }}
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -61,8 +62,10 @@ jobs:
         run: docker build -t stock-analyser .
 
       - name: Tag and Push Docker Image
+        id: tag_and_push
         run: |
           FULL_IMAGE_TAG="${{ secrets.ECR_REPOSITORY }}:${IMAGE_TAG}"
+          echo "FULL_IMAGE_TAG=${FULL_IMAGE_TAG}" >> $GITHUB_OUTPUT
           echo "Tagging Docker image with: $FULL_IMAGE_TAG"
 
           docker tag stock-analyser "$FULL_IMAGE_TAG"
@@ -90,9 +93,9 @@ jobs:
       - name: Update docker-compose.yml
         run: |
           COMPOSE_FILE="${{ needs.build-and-push.outputs.DEPLOY_ENV }}/docker-compose.yml"
-      
+       
           if [[ -f "$COMPOSE_FILE" ]]; then
-            sed -i "s|image: .*|image: ${{ secrets.ECR_REPOSITORY }}:${IMAGE_TAG}|" "$COMPOSE_FILE"
+            sed -i "s|image: .*|image: ${{ needs.build-and-push.outputs.FULL_IMAGE_TAG }}|" "$COMPOSE_FILE"
           else
             echo "ERROR: docker-compose.yml not found at $COMPOSE_FILE!"
             exit 1
@@ -101,6 +104,7 @@ jobs:
 
       - name: Commit and Push Changes
         run: |
+          git remote set-url origin https://x-access-token:${{ secrets.DEPLOY_REPO_PAT }}@github.com/FledglingTraders/stock-analyser-deploy.git
           git add .
-          git commit -m "Update docker image to ${{ secrets.ECR_REPOSITORY }}:${IMAGE_TAG}"
+          git commit -m "Update docker image to ${{ needs.build-and-push.outputs.FULL_IMAGE_TAG }}"
           git push origin main
